Clarify procedure for testing C++ changes.

--- a/htdocs/contribute.html
+++ b/htdocs/contribute.html
@@ -87,18 +87,34 @@ tests and add them to GCC's testsuite.  You must also perform
 regression tests to ensure that your patch does not break anything
 else.</p>
 
+<h3>Which tests to perform</h3>
+
 <p>If your change is to code that is not in a front end, or is to the
 C front end, you must perform a complete build of GCC and the runtime
 libraries included with it, on at least one target.  You must
 bootstrap all languages, not just C.  You must also run all of the
 testsuites included with GCC and its runtime libraries.  For a normal
-native configuration, running <code>make bootstrap</code> followed by
-<code>make -k check</code> from the top level of the GCC tree
-(<strong>not</strong> the <code>gcc</code> subdirectory) will
-accomplish this.</p>
+native configuration, running</p>
+<blockquote><pre>
+make bootstrap
+make -k check
+</pre></blockquote>
+<p>from the top level of the GCC tree (<strong>not</strong> the
+<code>gcc</code> subdirectory) will accomplish this.</p>
 
-<p>If your change is to a front end other than the C front end, or a
-runtime library other than <code>libgcc</code>, you need to verify
+<p>If your change is to the C++ front end, you should rebuild the compiler,
+<code>libstdc++</code>, <code>libjava</code> and run the C++ testsuite.
+If you already did a complete C,C++,Java bootstrap from your build
+directory before, you can use the following:</p>
+<blockquote><pre>
+make clean-target-libstdc++-v3                    # clean libstdc++ and ...
+test -d */libjava && make -C */libjava clean-nat  # ... parts of libjava
+make all-target-libstdc++-v3 all-target-libjava   # rebuild compiler and libraries
+make -k check-c++                                 # run C++/libstdc++ testsuite
+</pre></blockquote>
+
+<p>If your change is to a front end other than the C or C++ front end,
+or a runtime library other than <code>libgcc</code>, you need to verify
 only that the runtime library for that language still builds and the
 tests for that language have not regressed.  (Most languages have
 tests stored both in the <code>gcc</code> subdirectory, and in the
