Add a link to the PL/1 for GCC front end. By Ranjit Mathew  <rmathew@hotmail.com>.

--- a/htdocs/frontends.html
+++ b/htdocs/frontends.html
@@ -72,6 +72,9 @@ user-friendliness of assembly language".</li>
 VHDL (IEEE 1076) hardware design language.  GHDL and its runtime library
 are written in Ada95 using GNAT and are distributed under the GPL.
 Currently they only support GNU/Linux x86 systems.</li>
+
+<li><a href="http://pl1gcc.sourceforge.net/">PL/1 for GCC</a> is a
+GCC front end for the PL/I language.</li>
 </ul>
 
 </body>
