Clarify how to handle regressions.

--- a/htdocs/bugs/management.html
+++ b/htdocs/bugs/management.html
@@ -200,12 +200,13 @@ marked as such.  The summary line should read</p>
 [<em>branches-to-fix</em> regression] <em>rest-of-summary</em>
 </blockquote>
 
-<p>where <em>branches-to-fix</em> is the list of maintained
-branches (separated by slashes) that need fixing. In addition the target
-milestone should be set accordingly. A regression should start with
+<p>where <em>branches-to-fix</em> is the list of maintained branches
+(separated by slashes) that need fixing. A regression should start with
 severity "<strong>critical</strong>" to bring it to attention. It may
 be downgraded later if a defect is not important enough to justify
-"critical" severity.</p>
+"critical" severity. In addition the target milestone should be set
+to the next release that needs fixing. The milestone can be changed
+by the release manager and his/her delegates.</p>
 
 <p><strong>Meta-bugs (reports with the keyword "meta-bug")</strong> are
 used to group PRs that have a common denominator.  Meta-bugs do not have
