--- a/htdocs/bugs/index.html
+++ b/htdocs/bugs/index.html
@@ -29,7 +29,7 @@
   <li><a href="#cxx">C++</a>
     <ul>
     <li><a href="#missing">Missing features</a></li>
-    <li><a href="#parsing">Parse errors for "simple" code</a></li>
+    <li><a href="#fixed34">Bugs fixed in the upcoming 3.4 series</a></li>
     </ul>
   </li>
   <li><a href="#fortran">Fortran</a></li>
@@ -301,13 +301,8 @@ In particular, bugs caused by invalid code have a simple work-around:
 <h2><a name="cxx">C++</a></h2>
 
 <h3><a name="missing">Missing features</a></h3>
-<p>We know some things are missing from G++.</p>
 
 <dl>
-
-<dt>Covariant return types</dt>
-<dd><p>Up to (and including) GCC 3.3 we did not implement non-trivial
-covariant returns.  This has been addressed for GCC 3.4.</p></dd>
 
 <dt>The <code>export</code> keyword is not implemented.</dt>
 <dd><p>Most C++ compilers (G++ included) do not yet implement
@@ -320,83 +315,85 @@ definitions may be included from the header.</p></dd>
 
 </dl>
 
-<h3><a name="parsing">Parse errors for "simple" code</a></h3>
+<h3><a name="fixed34">Bugs fixed in the upcoming 3.4 series</a></h3>
 
-<p>Up to and including GCC 3.0, the compiler will give "parse error" for
-seemingly simple code, such as</p>
+<p>The following bugs are present up to (and including) GCC 3.3.x.
+They have been fixed in 3.4.0.</p>
 
-<pre>
-struct A{
+<dl>
+
+<dt>Two-stage name-lookup.</dt>
+
+<dd><p>GCC did not implement two-stage name-lookup (also see
+<a href="#new34">below</a>).</p></dd>
+
+<dt>Covariant return types.</dt>
+
+<dd><p>GCC did not implement non-trivial covariant returns.</p></dd>
+
+<dt>Parse errors for "simple" code.</dt>
+
+<dd><p>GCC gave parse errors for seemingly simple code, such as</p>
+
+<blockquote><pre>
+struct A
+{
   A();
   A(int);
-  void func();
 };
 
-struct B{
+struct B
+{
   B(A);
   B(A,A);
-  void func();
+  void foo();
 };
 
-void foo(){
-  B b(A(),A(1));     //Variable b, initialized with two temporaries
-  B(A(2)).func();    //B temporary, initialized with A temporary
+A bar()
+{
+  B b(A(),A(1));  // Variable b, initialized with two temporaries
+  B(A(2)).foo();  // B temporary, initialized with A temporary
+  return (A());   // return A temporary
 }
-</pre>
+</pre></blockquote>
 
-<p>The problem is that GCC starts to parse the declaration of
-<code>b</code> as a function <code>b</code> returning <code>B</code>,
-taking a function returning <code>A</code> as an argument. When it
-sees the 1, it is too late. The work-around in these cases is to add
-additional parentheses around the expressions that are mistaken as
+<p>Although being valid code, each of the three lines with a comment was
+rejected by GCC.  The work-arounds for older compiler versions proposed
+below do not change the semantics of the programs at all.</p>
+
+<p>The problem in the first case was that GCC started to parse the
+declaration of <code>b</code> as a function called <code>b</code> returning
+<code>B</code>, taking a function returning <code>A</code> as an argument.
+When it encountered the <code>1</code>, it was too late.  To show the
+compiler that this should be really an expression, a comma operator with
+a dummy argument could be used:</p>
+
+<blockquote><pre>
+B b((0,A()),A(1));
+</pre></blockquote>
+
+<p>The work-around for simpler cases like the second one was to add
+additional parentheses around the expressions that were mistaken as
 declarations:</p>
 
-<pre>
-  (B(A(2))).func();
-</pre>
+<blockquote><pre>
+(B(A(2))).foo();
+</pre></blockquote>
 
-<p>Sometimes, even that is not enough; to show the compiler that this
-should be really an expression, a comma operator with a dummy argument
-can be used:</p>
+<p>In the third case, however, additional parentheses were causing
+the problems: The compiler interpreted <code>A()</code> as a function
+(taking no arguments, returning <code>A</code>), and <code>(A())</code>
+as a cast lacking an expression to be casted, hence the parse error.
+The work-around was to omit the parentheses:</p>
 
-<pre>
-  B b((0,A()),A(1));
-</pre>
+<blockquote><pre>
+return A();
+</pre></blockquote>
 
-<p>Another example is the parse error for the <code>return</code>
-statement in</p>
+<p>This problem occured in a number of variants; in <code>throw</code>
+statements, people also frequently put the object in parentheses.</p></dd>
 
-<pre>
-struct A{};
-
-struct B{
-  A a;
-  A f1(bool);
-};
-
-A B::f1(bool b)
-{
-  if (b)
-    return (A());
-  return a;
-}
-</pre>
-
-<p>The problem is that the compiler interprets <code>A()</code> as a
-function (taking no arguments, returning <code>A</code>), and
-<code>(A()</code>) as a cast - with a missing expression, hence the
-parse error. The work-around is to omit the parentheses:</p>
-
-<pre>
-  if (b)
-    return A();
-</pre>
-
-<p>This problem occurs in a number of variants; in <code>throw</code>
-statements, people also frequently put the object in parentheses. The
-exact error also somewhat varies with the compiler version. The
-work-arounds proposed do not change the semantics of the program at
-all; they make them perhaps less readable.</p>
+</dl>
 
 <hr />
 
@@ -723,7 +720,7 @@ However, some non-conforming constructs are allowed when the command-line
 option <code>-fpermissive</code> is used.</p>
 
 <p>Two milestones in standard conformance are GCC 3.0 (including a major
-overhaul of the standard library) and the upcoming 3.4 version (with its
+overhaul of the standard library) and the upcoming 3.4.0 version (with its
 new C++ parser).</p>
 
 <h4>New in GCC 3.0</h4>
@@ -774,7 +771,7 @@ decision.</li>
 
 </ul>
 
-<h4>New in GCC 3.4</h4>
+<h4><a name="new34">New in GCC 3.4.0</a></h4>
 
 <p>The new parser brings a lot of improvements, especially concerning
 name-lookup.</p>
