Deprecate name-injection for friends

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -297,6 +297,19 @@
     <li>Default arguments in function types have been deprecated and
         will be removed.</li>
 
+    <li>ARM-style name-injection of friend declarations has been
+        deprecated and will be removed.  For example:
+
+          struct S { 
+            friend void f();
+          };
+  
+          void g() { f(); } 
+
+        will not be accepted by future versions of G++; instead a
+        declaration of "f" will need to be present outside of the 
+        scope of "S".</li>
+
     <li>Covariant returns are implemented for all but varadic
         functions that require an adjustment.</li>
 		
