--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -56,7 +56,7 @@ and snapshots, we now enable <code>-Werror</code> during a full bootstrap.
 <dd>
 The GCC Steering Committee has named Gabriel Dos Reis as release manager for
 the upcoming GCC 3.2.2 release, allowing Mark Mitchell to focus his
-efforts on the GCC 3.3 and 3.4 releases.  3.2.2 is intended to be a bug
+efforts on the GCC 3.3 and 3.4 release series.  3.2.2 is intended to be a bug
 fix release only.
 </dd>
 
