Notes removal of labels at end of compound statements.

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -201,6 +201,9 @@
 	a correct implementation of <code>#import</code> and
         <code>#pragma once</code>.
 	These two directives have therefore been un-deprecated.</li>
+    <li>The undocumented extension that allowed C programs to have a
+        label at the end of a compound statement, which has been
+        deprecated since GCC 3.0, has been removed.</li>
     <li>The cast-as-lvalue extension has been removed for C++ and
         deprecated for C and Objective-C.  In particular,
         code like this:
