--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -8,7 +8,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2004-01-12.
+2004-01-15.
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
@@ -18,14 +18,15 @@ differences are currently required.</p>
 
 <table border="1" width="100%">
 <tr><th>Class</th> <th>libgcj</th> <th>Classpath</th> <th>Merge Status</th> </tr>
-<tr> <td>gnu.java.awt.BitwiseXORComposite</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>gnu.java.awt.ClasspathToolkit</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.ClasspathToolkit.diff">Diff</a></td> </tr>
 <tr> <td>gnu.java.awt.EmbeddedWindow</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> </tr>
 <tr> <td>gnu.java.awt.EmbeddedWindowSupport</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> </tr>
 <tr> <td>gnu.java.awt.peer.EmbeddedWindowPeer</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> </tr>
+<tr> <td>gnu.java.awt.peer.gtk.GdkGraphics2D</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GdkGraphics2D.diff">Diff</a></td> </tr>
 <tr> <td>gnu.java.awt.peer.gtk.GtkEmbeddedWindowPeer</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> </tr>
 <tr> <td>gnu.java.awt.peer.gtk.GtkFileDialogPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkFileDialogPeer.diff">Diff</a></td> </tr>
 <tr> <td>gnu.java.awt.peer.gtk.GtkToolkit</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkToolkit.diff">Diff</a></td> </tr>
+<tr> <td>gnu.java.awt.peer.gtk.TestAWT</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.TestAWT.diff">Diff</a></td> </tr>
 <tr> <td>gnu.javax.swing.plaf.gtk.GtkBorders</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>gnu.javax.swing.plaf.gtk.GtkCheckBoxUI</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>gnu.javax.swing.plaf.gtk.GtkIconFactory</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
@@ -35,6 +36,7 @@ differences are currently required.</p>
 <tr> <td>gnu.javax.swing.plaf.gtk.SliderTest</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.awt.Container</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.Container.diff">Diff</a></td> </tr>
 <tr> <td>java.awt.Dialog</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.Dialog.diff">Diff</a></td> </tr>
+<tr> <td>java.awt.EventQueue</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.EventQueue.diff">Diff</a></td> </tr>
 <tr> <td>java.awt.Font</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.Font.diff">Diff</a></td> </tr>
 <tr> <td>java.awt.image.PixelGrabber</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.image.PixelGrabber.diff">Diff</a></td> </tr>
 <tr> <td>java.io.File</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.io.File.diff">Diff</a></td> </tr>
@@ -100,6 +102,7 @@ differences are currently required.</p>
 <tr> <td>javax.rmi.CORBA.ObjectImpl</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>javax.rmi.CORBA.SystemException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>javax.rmi.ORB</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
+<tr> <td>javax.swing.table.DefaultTableCellRenderer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.swing.table.DefaultTableCellRenderer.diff">Diff</a></td> </tr>
 <tr> <td>javax.xml.parsers.ClassStuff</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>javax.xml.parsers.DocumentBuilder</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>javax.xml.parsers.DocumentBuilderFactory</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
