Update reghunt for the intl directory.

--- a/htdocs/bugs/reghunt.html
+++ b/htdocs/bugs/reghunt.html
@@ -148,14 +148,16 @@ you can do the following after a normal configure:</p>
 <pre>
     cd <i>objdir</i>
     make all-libiberty
+    make all-intl || true
     make configure-gcc || true
     cd gcc
     make cc1plus
 </pre>
 
-<p>This will build libiberty and <code>cc1plus</code> (the make of
+<p>This will build libiberty, intl and <code>cc1plus</code> (the make of
 <code>configure-gcc</code> is required for configuration changes that
-were added in December 2002).  When you have
+were added in December 2002; the make all-intl is required for
+configuration changes that were added in July 2003).  When you have
 <code>cc1plus</code>, you can feed your source code snippet to it:</p>
 
 <pre>
