--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -40,14 +40,13 @@ to maintain and improve quality.</p>
      and fourth.
 -->
 
-<!--
 <dt><strong>Active release branch:</strong>
   will become <a href="gcc-3.4/index.html">GCC 3.4.0</a>
 </dt><dd>
-  Bug fixes only.
+  Bug fixes for regressions only.
 </dd>
--->
 
+<!--
 <dt><strong>Current release series:</strong>
   <a href="gcc-3.3/">GCC 3.3.2</a> (released 2003-10-17)
 </dt><dd>
@@ -55,6 +54,7 @@ to maintain and improve quality.</p>
      <a href="http://gcc.gnu.org/ml/gcc/2003-12/msg00570.html">2003-12-08</a>
   (open for all bugfixes).
 </dd>
+-->
 
 <dt><strong>Previous release series:</strong>
   <a href="gcc-3.2/">GCC 3.2.3</a> (released 2003-04-25)
@@ -64,9 +64,9 @@ to maintain and improve quality.</p>
 </dd>
 
 <dt><strong>Active development (mainline):</strong>
-  will become GCC 3.4.0 (<a href="gcc-3.4/changes.html">current changes</a>)
+  will become GCC 3.5.0 (<a href="gcc-3.5/changes.html">current changes</a>)
 </dt><dd>
-  <a href="develop.html#stage3">Stage 3</a>;
+  <a href="develop.html#stage1">Stage 1</a>;
   open for all maintainers.
 </dd>
 
