--- a/htdocs/projects/beginner.html
+++ b/htdocs/projects/beginner.html
@@ -414,6 +414,10 @@ everything which is useful from the debugger has a name starting with
 href="../codingconventions.html">GCC coding conventions</a>
 consistently.</li>
 
+<li>Change code to follow the coding conventions in other ways.  For
+example, change arbitrary hardcoded parameters to use the
+<code>--param</code> mechanism.</li>
+
 </ul>
 
 <h2>Port cleanliness</h2>
