Document "GNU/Linux" and "Microsoft Windows" terminology.

--- a/htdocs/codingconventions.html
+++ b/htdocs/codingconventions.html
@@ -259,6 +259,11 @@ and code.  The following table lists some simple cases:</p>
     <td></td>
   </tr>
   <tr>
+    <td>"GNU/Linux" (except in reference to the kernel)</td>
+    <td>"Linux" or "linux" or "Linux/GNU"</td>
+    <td></td>
+  </tr>
+  <tr>
     <td>"lowercase"</td>
     <td>"lower case" or "lower-case"</td>
     <td></td>
@@ -266,6 +271,11 @@ and code.  The following table lists some simple cases:</p>
   <tr>
     <td>"H8S"</td>
     <td>"H8/S"</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>Microsoft Windows</td>
+    <td>Windows</td>
     <td></td>
   </tr>
   <tr>
