--- a/htdocs/codingconventions.html
+++ b/htdocs/codingconventions.html
@@ -274,8 +274,8 @@ and code.  The following table lists some simple cases:</p>
     <td></td>
   </tr>
   <tr>
-    <td>Microsoft Windows</td>
-    <td>Windows</td>
+    <td>"Microsoft Windows"</td>
+    <td>"Windows"</td>
     <td></td>
   </tr>
   <tr>
