Add H8 ABI document.

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -118,6 +118,8 @@ names.
    <br />Manufacturer: Renesas
    <br />Exact chip name: H8/300
    <br />GDB includes a simulator.
+   <br /><a href="http://gcc.gnu.org/projects/h8300-abi.html">H8/300
+         Application Binary Interface for GCC</a>.
    <br /><a href="http://www.gnuh8.org/">GNUH8 Mailing List</a>.
  </li>
  
