--- a/htdocs/projects/h8300-abi.html
+++ b/htdocs/projects/h8300-abi.html
@@ -54,7 +54,7 @@ stack is different from the size of an actual push, a padding is added
 downward.  For example, if 2 bytes of data, 0x1234, are to be pushed
 onto the stack on H8/300H, 4 bytes are pushed like so:</p>
 
-<table border=1>
+<table border="1">
 <tr><td>sp + 3</td><td>0x34</td></tr>
 <tr><td>sp + 2</td><td>0x12</td></tr>
 <tr><td>sp + 1</td><td>padding (unknown value)</td></tr>
@@ -102,22 +102,23 @@ bar (struct s *p)
 
 <h2>Call Clobbered Registers</h2>
 
-R0 through R3 are call clobbered on H8/300H and H8S.  Likewise, ER0
+<p>R0 through R3 are call clobbered on H8/300H and H8S.  Likewise, ER0
 through ER3 are call clobbered on H8/300H and H8S.  These registers
 are clobbered regardless of the number of the registers used for
-argument passing.
+argument passing.</p>
 
 <h2>Frame Pointer</h2>
 
-On H8/300, R6 is used as the frame pointer.  On H8/300H and H8S, ER6
-is used as the frame pointer.  -fomit-frame-pointer can be used to
-eliminate the use of the frame pointer in favor of the stack pointer.
+<p>On H8/300, R6 is used as the frame pointer.  On H8/300H and H8S,
+ER6 is used as the frame pointer.  <tt>-fomit-frame-pointer</tt> can
+be used to eliminate the use of the frame pointer in favor of the
+stack pointer.</p>
 
 <h2>Bit-Field</h2>
 
 <p>The memory location containing a bit-field is filled from MSB to
-LSB.  In the following example, a will take bit 7, MSB.  b will take
-bit 6 and bit 5.</p>
+LSB.  In the following example, <tt>a</tt> will take bit 7, MSB.
+<tt>b</tt> will take bit 6 and bit 5.</p>
 
 <pre>
 struct s {
@@ -131,6 +132,10 @@ struct s {
 <p>Unless <tt>__attribute__ ((packed))</tt> is attached to the
 declaration of a struct, each structure member is aligned to a
 multiple of 2 bytes on H8/300 and of 4 bytes on H8/300H and H8S.</p>
+
+<h2>Complex Numbers</h2>
+
+To be documented.
 
 </body>
 </html>
