* index.html: HTML fix.  Also, moved items from 2002... 	* old-news.html: ... here.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -77,7 +77,7 @@ For <code>javax.crypto</code> support, we recommend the use of
 </td><td>
 Graydon Hoare has checked in
 <a href="http://gcc.gnu.org/ml/java-patches/2004-q1/msg00241.html">a
-patch to implement Swing buttons.  This is the first working Swing code,
+patch to implement Swing buttons</a>.  This is the first working Swing code,
 a major improvement.
 </td></tr>
 
@@ -179,121 +179,6 @@ bytecode interpreter is now available on SPARC Solaris hosts.
 The January 2003 issue of Linux Journal contains the article
 <a href="http://www.linuxjournal.com/article.php?sid=4860">
 <cite>Compiling Java with GCJ</cite></a> by Per Bothner.
-</td></tr>
-
-<tr><td valign="top">
-<b>December 27, 2002</b>
-</td><td>
-It is now possible to run the <a href="http://www.eclipse.org">Eclipse</a> IDE 
-using the GCJ runtime, thanks to the work of Tom Tromey, Mark Wielaard, and
-others. Mark has a web page with further information and screenshots <a
-href="http://www.klomp.org/mark/gij_eclipse/index.html">here</a>.
-</td></tr>
-
-<tr><td valign="top">
-<b>September 29, 2002</b>
-</td><td>
-Ulrich Weigand has implemented the necessary support in libffi to get
-libgcj running on the s390x.
-</td></tr>
-
-<tr><td valign="top">
-<b>September 29, 2002</b>
-</td><td>
-Anthony Green merged the java.lang.reflect.Proxy implementation in from 
-GNU Classpath.
-</td></tr>
-
-<tr><td valign="top">
-<b>August 16, 2002</b>
-</td><td>
-Andrew Haley updated the gcc tree-based inliner to work for gcj.
-</td></tr>
-
-<tr><td valign="top">
-<b>July 25, 2002</b>
-</td><td>
-Kaz Kojima has implemented the necessary support in libffi and libjava
-to get libgcj running on SH-3/4.
-</td></tr>
-
-<tr><td valign="top">
-<b>July 19, 2002</b>
-</td><td>
-Bo Thorsen, SuSE Labs, has implemented the necessary support in libffi,
-boehm-gc and libjava to get libgcj running on x86-64. This is a big
-step towards getting libgcj fully supported on x86-64.
-</td></tr>
-
-<tr><td valign="top">
-<b>June 24, 2002</b>
-</td><td>
-Tom Tromey has checked in a patch that makes the bytecode interpreter
-use direct threading.  This gives the interpreter a performance
-boost.
-</td></tr>
-
-<tr><td valign="top">
-<b>June 21, 2002</b>
-</td><td>
-The <code>java.sql</code> and <code>javax.sql</code> packages were updated
-by Bryce McKinlay to implement the JDBC 3.0 (JDK 1.4) API.
-</td></tr>
-
-<tr><td valign="top">
-<b>June 11, 2002</b>
-</td><td>
-Tom Tromey has implemented the JDK 1.4 <code>assert</code> facility.
-</td></tr>
-
-<tr><td valign="top">
-<b>March 10, 2002</b>
-</td><td>
-Adam Megacz has contributed a mingw32 port of libgcj.  This port is
-still a little bit incomplete (e.g., <code>java.lang.Process</code>
-doesn't work), and it currently only works as a target, not a host.
-Still, it works, and he is using it for <a
-href="http://www.xwt.org/">XWT</a>.  This work will appear in the
-upcoming 3.1 release.
-</td></tr>
-
-<tr><td valign="top">
-<b>February 28, 2002</b>
-</td><td>
-Bryce McKinlay has contributed a patch to optimize some of the array
-access and added a new compiler flag, <code>--no-store-check</code>,
-to disable assignability checks for stores into object arrays. With
-code that is known not to throw <code>ArrayStoreException</code>, this
-flag can be used to disable the check operations. In which case it can
-provide a reasonable performance boost and slight code size reduction.
-</td></tr>
-
-<tr><td valign="top">
-<b>January 22, 2002</b>
-</td><td>
-Tom Tromey has contributed a patch to allow certain Java method calls
-to be inlined by gcj.  For instance, calls to <code>Math.min</code>
-are now inlined when optimization is enabled.  This patch includes
-some infrastructure to make it easy to add more such inlines when
-desired.
-</td></tr>
-
-<tr><td valign="top">
-<b>January 14, 2002</b>
-</td><td>
-Richard Stallman has changed the licensing of the Classpath AWT
-implementation to match the licensing of the rest of Classpath.  This
-means that the only remaining barrier to AWT for libgcj is manpower.
-Work has already begun to merge the Classpath and libgcj AWT
-implementations.
-</td></tr>
-
-<tr><td valign="top">
-<b>January 14, 2002</b>
-</td><td>
-Adam Megacz announced that <a href="http://www.xwt.org">XWT</a> is
-an ActiveX control which is written in Java and compiled with gcj.
-We hope to be checking in his Windows patches in the near future.
 </td></tr>
 
 <tr><td valign="top">
