* swingshot.png: New file. 	* index.html: Link to screen shot.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -78,7 +78,7 @@ For <code>javax.crypto</code> support, we recommend the use of
 Graydon Hoare has checked in
 <a href="http://gcc.gnu.org/ml/java-patches/2004-q1/msg00241.html">a
 patch to implement Swing buttons</a>.  This is the first working Swing code,
-a major improvement.
+a major improvement.  See the <a href="swingshot.png">screen shot</a>.
 </td></tr>
 
 <tr><td valign="top">
