Add a note about unreviewed patches and Bugzilla. Originally by Dara Hazeghi <dhazeghi@yahoo.com>.

--- a/htdocs/bugs/management.html
+++ b/htdocs/bugs/management.html
@@ -208,6 +208,10 @@ be downgraded later if a defect is not important enough to justify
 to the next release that needs fixing. The milestone can be changed
 by the release manager and his/her delegates.</p>
 
+<p><strong>If a patch fixing a PR has been submitted</strong>, a link
+to the message with the patch should be added to the PR, as well as the
+keyword "patch".</p>
+
 <p><strong>Meta-bugs (reports with the keyword "meta-bug")</strong> are
 used to group PRs that have a common denominator.  Meta-bugs do not have
 testcases of their own, but provide links to regular PRs via Bugzilla's
