* index.html: Link to news.html. 	* old-news.html: Renamed... 	* news.html: ... here.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -183,7 +183,7 @@ The January 2003 issue of Linux Journal contains the article
 
 <tr><td valign="top">
 </td><td>
-<a href="old-news.html">Less recent GCJ news</a>
+<a href="news.html">Less recent GCJ news</a>
 </td></tr>
 </table>
 
