--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -43,7 +43,9 @@ to maintain and improve quality.</p>
 <dt><strong>Active release branch:</strong>
   will become <a href="gcc-3.4/index.html">GCC 3.4.0</a>
 </dt><dd>
-  Bug fixes for regressions only.
+  Branch status:
+     <a href="http://gcc.gnu.org/ml/gcc/2004-01/msg01959.html">2004-01-26</a>
+  (open for bug fixes for regressions only).
 </dd>
 
 <dt><strong>Current release series:</strong>
