Updated for changes to gcj and libgcj

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -455,7 +455,27 @@
 <h3>Java</h3>
 
   <ul>
-    <li></li>
+    <li>Compiling a .jar file will now cause non-.class entries to be
+      automatically compiled as resources.</li>
+    <li>libgcj has been ported to Darwin.</li>
+    <li>Jeff Sturm has adapted Jan Hubicka's call graph optimization
+      code to gcj.</li>
+    <li>libgcj has a new <code>gcjlib</code> URL type; this
+      lets <code>URLClassLoader</code> load code from shared
+      libraries.</li>
+    <li>libgcj has been much more completely merged with <a
+      href="http://www.classpath.org/">GNU Classpath</a>.</li>
+    <li>Class loading is now much more correct; in particular the
+      caller's class loader is now used when that is required.</li>
+    <li><a href="http://www.eclipse.org/">Eclipse 2.x</a> will run
+      out of the box using <code>gij</code>.</li>
+    <li>Parts of <code>java.nio</code> have been implemented.
+      Direct and indirect buffers work, as do fundamental file and
+      socket operations.</li>
+    <li><code>java.awt</code> has been improved, though it is still
+      not ready for general use.</li>
+    <li>The HTTP protocol handler now uses HTTP/1.1 and can handle
+      the POST method.</li>
   </ul>
 
 <h3>Fortran</h3>
