Added Java list item for MinGW enhancements.

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -476,6 +476,10 @@
       not ready for general use.</li>
     <li>The HTTP protocol handler now uses HTTP/1.1 and can handle
       the POST method.</li>
+    <li>The MinGW port has matured. Enhancements include socket
+      timeout support, thread interruption, improved
+      <code>Runtime.exec()</code> handling and support for accented
+      characters in filenames.</li>
   </ul>
 
 <h3>Fortran</h3>
