Change CNI documentation link to current manual section, not old paper. Mention my Linux Journal article from January 2003.

--- a/htdocs/java/docs.html
+++ b/htdocs/java/docs.html
@@ -26,7 +26,7 @@
       <li>How to <a href="gdb.html">debug</a> a Java program using GDB.</li>
       <li><a href="faq.html">Frequently Asked Questions</a>.</li>
       <li>How to <a href="contrib.html">contribute</a>.</li>
-      <li><a href="papers/cni/t1.html">CNI Documentation</a>.</li>
+      <li><a href="http://gcc.gnu.org/onlinedocs/gcj/About-CNI.html">CNI Documentation</a>.</li>
     </ul>
 
 <br />
@@ -62,6 +62,13 @@ Papers describing our work
 conferences and magazines.</p>
 
 <ul>
+  <li>
+     <b>January 2003</b>: "<cite>Compiling Java with GCJ</cite>"
+     is an overview article that appeared in the <cite>Linux Journal</cite>.
+      <br />[<a href="http://www.linuxjournal.com/article.php?sid=4860">HTML</a>]
+      <br />Author: <a href="http://www.bothner.com/">Per Bothner</a>.
+      </li>
+
   <li><a name="CNI">
       <b>February 1999</b>: "<cite>The Cygnus Native Interface for C++/Java Integration</cite>".</a>
        <br />[<a href="papers/cni/t1.html">HTML</a>] 
