Mention the new frame layout on H8.

--- a/htdocs/gcc-3.5/changes.html
+++ b/htdocs/gcc-3.5/changes.html
@@ -19,6 +19,13 @@
 
 <h2>New Targets and Target Specific Improvements</h2>
 
+<h3>H8/300</h3>
+  <ul>
+    <li>The frame layout has changed.  In the new layout, the prologue
+    of a function first saves registers and then allocate space for
+    locals, resulting in an 1% improvement on code size.</li>
+  </ul>
+
 <h2>Documentation improvements</h2>
 
 <h2>Other significant improvements</h2>
